[package]
name = "mandelbrot-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16"
log = "0.4"
env_logger = "0.10"
pollster = "0.2"
winit = "0.27"
bytemuck = { version = "1.12", features = [ "derive" ] }
